--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@notionhq/client": "^1.0.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "discord.js": "^13.17.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
